controller sınıfları yazıldı